# admin_control_panel

./: README.md  package-lock.json
server/: .env  Cargo.toml  rustfmt.toml
server/configs/: Cargo.toml  config.rs
server/migrations/0001_create_users_table/: down.sql  up.sql
server/migrations/0002_add_users_password/: down.sql  up.sql
server/migrations/0002_create_posts_table/: down.sql  up.sql
server/migrations/0003_create_posts_table/: down.sql
server/migrations/0003_create_refresh_table/: down.sql  up.sql
server/migrations/0004_add_ temp_registrations/: down.sql  up.sql
server/migrations/0004_create_refresh_table/: down.sql
server/migrations/0005_add_users_verified/: down.sql  up.sql
server/migrations/0006_clear_users/: down.sql
server/migrations/0007_add_users_email/: down.sql  up.sql
server/migrations/0008_add_ temp_registrations/: down.sql  up.sql
server/migrations/0009_add_ timestamps_to_users/: down.sql  up.sql
server/migrations/src/: apply_migrations.rs
server/src/: main.rs
server/src/configs/: config.rs
server/src/errors/: auth_errors.rs  cookies_errors.rs  email_errors.rs  mod.rs  posts_errors.rs  temp_registration_errors.rs  users_errors.rs
server/src/handlers/: auth_handler.rs  cookies_handler.rs  email_handlers.rs  mod.rs  ping_pong_handler.rs  posts_handler.rs  temp_registration_handler.rs  users_handler.rs
server/src/middlewares/: auth_middleware.rs
server/src/migrations/: apply_migrations.rs  mod.rs
server/src/models/: auth_models.rs  cookies_models.rs  email_models.rs  mod.rs  ping_pong_models.rs  posts_models.rs  (+2 more)
(+40 files in other folders)
